[package]
name = "kindle-mdns"
version = "0.1.1"
edition = "2021"
keywords = ["kindle", "mdns", "service", "daemon"]
categories = ["embedded"]
description = "Kindle mDNS registration daemon"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
mdns-sd = { git = "https://github.com/Hanssen0/mdns-sd", rev = "3b995b8", default-features = false }
